@@ -1,3 +1,8 @@
+2013-10-09  Tom Tromey  <tromey@redhat.com>
+
+	* dwarf2read.c (dwarf2_get_dwz_file): Update for type change in
+	bfd_get_alt_debug_link_info.
+
 2013-10-09  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	New flag OBJF_NOT_FILENAME.
